backend/vulnerability_analysis/testing/hof2/segments/klee-out-0/test000002.ptr.err
Error: memory error: out of bound pointer
File: libc/string/strcpy.c
Line: 27
assembly.ll line: 11769
State: 1
Stack: 
	#000011769 in strcpy(139821878083584, 139501903020032) at libc/string/strcpy.c:27
	#100007858 in hash_input(139491165601792) at testing/hof5/segments/segment_1_klee.c:18
	#200007944 in __klee_posix_wrapped_main() at testing/hof5/segments/segment_1_klee.c:29
	#300006076 in __user_main(1, 140716841893888, 140716841893904) at src/runtime/POSIX/klee_init_env.c:245
	#400000530 in __uClibc_main(140701062922240, 1, 140716841893888, 0, 0, 0, 0) at libc/misc/internals/__uClibc_main.c:401
	#500000695 in main(1, 140716841893888)
Info: 
	address: 139821878083594
	next: object at 139471301378048 of size 4
		MO7599[4] allocated at __klee_posix_wrapped_main():  %1 = alloca i32, align 4
